--- a/q1/package.json
+++ b/q1/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.26.19",
     "react": "16.1.1",
-    "redux": "3.7.2",
     "react-dom": "16.1.1",
-    "react-redux": "5.0.6"
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
